# QR-Code-Generator

./: README.md  hacs.json  pyproject.toml  requirements_test.txt  setup.cfg
.devcontainer/: configuration.yaml  devcontainer.json
.github/workflows/: pull.yml  push.yml
custom_components/qr_generator/: __init__.py  config_flow.py  const.py  icons.json  image.py  manifest.json  services.py  services.yaml
custom_components/qr_generator/translations/: sk.json
tests/: test_camera.py  test_config_flow.py  test_image.py
