[project]
name = "qr_generator"
version = "2.1.17"
description = "This integration allows to create QR Codes with static or dynamic content."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "DeerMaximum", email = "git983456@parabelmail.de" },
]
maintainers = [
    { name = "DeerMaximum", email = "git983456@parabelmail.de" },
]
requires-python = ">=3.13.2"
keywords = [
    "homeassistant",
    "qr",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pyqrcode==1.2.1",
    "pypng==0.20220715.0"
]

[project.urls]
homepage = "https://github.com/DeerMaximum/QR-Code-Generator"
repository = "https://github.com/DeerMaximum/QR-Code-Generator"

[dependency-groups]
dev = [
    "aiohttp_cors",
    "homeassistant",
    "pytest-homeassistant-custom-component==0.13.277"
]
lint = [
    "ruff>=0.12.0"
]

[tool.ruff]
preview = true

[tool.ruff.lint.isort]
case-sensitive = true

[tool.uv]
default-groups = "all"
